[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Generate JSON object for function calls"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "llm-sdk",
    "mypy>=2.1.0",
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
    "types-regex>=2026.5.9.20260518",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }

[tool.mypy]
exclude = [
  '^data/',
]

[[tool.mypy.overrides]]
module = [
  "llm_sdk",
  "llm_sdk.*"
]
ignore_errors = true
follow_imports = "skip"
